--- a/HTML-dasar/index.html
+++ b/HTML-dasar/index.html
@@ -20,6 +20,7 @@
                     <li><a href="Produk.html">product</a></li>
                     <li><a href="Login.html">login</a></li>
                     <li><a href="Pendaftaran.html">pendaftaran</a></li>
+                    <li><a href="produkarray.html">Produk Baru Array</a></li>
                 </ul>
             </div>
                 <div class="img">
